# gRPC_service

./: docker-compose.yml  dockerfile  pyproject.toml
.github/workflows/: deploy.yml
app/client/: client.py
app/server/: server.py  service.py
server/: server.py  service.py
