[project]
name = "grpc"
version = "0.1.0"
description = "grpc server project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "grpcio>=1.80.0",
    "grpcio-tools>=1.80.0",
    "ruff>=0.15.8",
]

[project.optional-dependencies]
lint = ["ruff"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
